@@ -174,6 +174,9 @@ public:
   static const ConicRadicalType* instance();
   ObjectImp* calc( const Args& parents, const KigDocument& ) const;
   const ObjectImpType* resultId() const;
+  QStringList specialActions() const;
+  void executeAction( int i, ObjectHolder& o, ObjectTypeCalcer& t,
+                      KigDocument& d, KigWidget& w, NormalMode& m ) const;
 };
 
 #endif
